modified:   .awesome/widgets 	modified:   .awesomerc 	modified:   .lscolor256 	modified:   .xmobarrc

--- a/.awesomerc
+++ b/.awesomerc
@@ -1,7 +1,5 @@
-# awesome-git 
-# config by PhrAok 07/03/2008
-# Modified by Blu3ness, Mar 7. :)
-# man awesomerc  http://www.calmar.ws/awesome/awesomerc.5.html
+# awesome-2.3.6 
+# config by saiddy 
 
 screen 0
 {
@@ -23,12 +21,6 @@ screen 0
         height = "14" 
 	}
 
- #   styles
-  #  {
-  #    normal { font = "terminus 9" fg = "#454545" bg = "#e3e3e3" border = "#cccccc" shadow = "#cccccc" shadow_offset = "1" }
-  #    focus { fg = "#ffffff" bg = "#1387e1" border = "#5ba8de" shadow = "#111111" shadow_offset = "1" }
- #     urgent {fg = "#ffffff" bg = "#d53737" shadow = "#111111" shadow_offset = "1"}
-  #  }
 styles    # global statusbar/titlebar prefs
     {
         normal
@@ -42,9 +34,7 @@ styles    # global statusbar/titlebar prefs
         {
             fg = "#ffffff"
             bg = "#0066ff"
-		#	bg = "#1387e1"
-            border = "#ff6666"
-		#	border = "#1387e1"
+            border = "#daff30"
         }
         urgent
         {
@@ -63,7 +53,7 @@ styles    # global statusbar/titlebar prefs
 
     layouts
     {
-	    layout tile { image = "/home/ken/.awesome/icons/layouts/txt/tile.png" }
+        layout tile { image = "/home/ken/.awesome/icons/layouts/txt/tile.png" }
         layout tileleft { image = "/home/ken/.awesome/icons/layouts/txt/tileleft.png" }
         layout tilebottom { image = "/home/ken/.awesome/icons/layouts/txt/tilebottom.png" }
         #layout tiletop { image = "/usr/share/awesome/icons/layouts/tiletopw.png" }
@@ -99,24 +89,22 @@ styles    # global statusbar/titlebar prefs
         textbox sep01 {text = "                      " }
         textbox mpd { text = "" align = "right"  style { fg = "#FFB44B" } }
         textbox spacer1   { align = "right"    text = " | "   style { fg = "#515151" } }
-		textbox cpu_freq { align = "right" style { fg ="#78e6d1" }}
-		textbox cpu_per { align = "right" style { fg ="#4e9a06" }}
-		textbox cpu_temp { align = "right" style { fg ="#cffb7e" }}
+	textbox cpu_freq { align = "right" style { fg ="#78e6d1" }}
+	textbox cpu_per { align = "right" style { fg ="#4e9a06" }}
+	textbox cpu_temp { align = "right" style { fg ="#cffb7e" }}
         textbox cpu_avg { align = "right" style { fg ="#6b86f8" }}
-		textbox spacer2   { align = "right"    text = " | "   style { fg = "#515151" } }
-		textbox mem { align = "right" style { fg = "#e896b6" }}
-		textbox spacer3   { align = "right"    text = " | "   style { fg = "#515151" } }
-		textbox clock { align = "right" style { fg = "#ffffff" }}
-	    textbox spacer4  { align = "right"    text = " | "   style { fg = "#515151" } }
-#	    progressbar pb_vol
-#        {
-#            data master { bg = "#cccccc" fg = "#1387e1" fg_center = "#1387e1" fg_end = "#1387e1" fg_off = "#89a7be" bordercolor="#e3e3e3" }
-#            width = "11" height = "0.9" gap = 1 align = "right" vertical = "true"
-#            ticks_count = "4" ticks_gap = "1"
-#            mouse { button = "4" command = "spawn" arg = "exec amixer -c0 sset Master 2dB+ >/dev/null" }
-#            mouse { button = "5" command = "spawn" arg = "exec amixer -c0 sset Master 2dB- >/dev/null" }
-#        }
-#        textbox spacer5   { align = "right"    text = " | "   style { fg = "#515151" } }
+	textbox spacer2   { align = "right"    text = " | "   style { fg = "#515151" } }
+	textbox mem { align = "right" style { fg = "#e896b6" }}
+	textbox spacer3   { align = "right"    text = " | "   style { fg = "#515151" } }
+	textbox net { align = "right" style { fg = "#feff3f" }}
+        textbox spacer4  { align = "right"    text = " | "   style { fg = "#515151" } }
+	textbox mail{ align = "right" style { fg = "#dfaf00" }}
+        textbox spacer5  { align = "right"    text = " | "   style { fg = "#515151" } }
+	textbox vol { align = "right" style { fg = "#1387e1" }}
+        textbox spacer6  { align = "right"    text = " | "   style { fg = "#515151" } }
+	textbox clock { align = "right" style { fg = "#ffffff" }}
+        textbox spacer7  { align = "right"    text = " | "   style { fg = "#515151" } }
+        
         iconbox logo
         { 
             image = "/usr/share/awesome/icons/awesome16.png"
@@ -214,17 +202,15 @@ rules
 keys 
     { 
     #
-    key { modkey = {"Mod4"} key = "F1" command = "spawn" arg = "for i in /usr/share/man/man?;do ls $i; done | cut -d. -f1 | awesome-menu -e 'xterm -e man ' 'See manual page for:'" }
-    key { modkey = {"Mod4"} key = "F2" command = "spawn" arg = "ls /usr/bin | awesome-menu -e 'exec ' 'awesomeRun:'" }
-    key { modkey = {"Mod4"} key = "F3" command = "spawn" arg = "cut -d' ' -f1 ~/.ssh/known_hosts | cut -d, -f1 | awesome-menu -e 'xterm -e ssh ' 'ssh to:'" }
+        key { modkey = {"Mod4"} key = "F1" command = "spawn" arg = "gmrun" }
+        key { modkey = {"Mod4"} key = "F2" command = "spawn" arg = "ls /usr/bin | awesome-menu -e 'exec ' 'awesomeRun:'" }
+        key { modkey = {"Mod4"} key = "F3" command = "spawn" arg = "cut -d' ' -f1 ~/.ssh/known_hosts | cut -d, -f1 | awesome-menu -e 'xterm -e ssh ' 'ssh to:'" }
 	key { modkey = {"Mod4"} key = "space"	command = "tag_setlayout" arg = "+1" } 
 	key { modkey = {"Mod4", "Shift"} key = "space"	command = "tag_setlayout" arg = "-1" } 
 	key { modkey = {"Mod4"} key = "b"	 command = "statusbar_toggle" } 
 	key { modkey = {"Mod4"} key = "j" command = "client_focusnext" }
-	key { modkey = {"Mod4"} key = "Right" command = "client_focusnext" }
 	key { modkey = {"Mod1"} key = "Tab" command = "client_focusnext" }
 	key { modkey = {"Mod4"} key = "k" command = "client_focusprev" }
-	key { modkey = {"Mod4"} key = "Left" command = "client_focusprev" } 
 	key { modkey = {"Mod4"} key = "Tab" command = "client_focusnext" } 
 	key { modkey = {"Mod4", "Shift"} key = "j" command = "client_swapnext" } 
 	key { modkey = {"Mod4", "Shift"} key = "k" command = "client_swapprev" } 
@@ -243,8 +229,8 @@ keys
 	key { modkey = {"Mod4", "Control"} key = "space" command = "client_togglefloating" } 
 	key { modkey = {"Mod4"} key = "s" command = "client_togglescratch" } 
 	key { modkey = {"Mod4", "Control"} key = "s" command = "client_setscratch" } 
-    key { modkey = {"Mod4", "Control"}  key = "s" command = "client_setscratch"  }
-    key { modkey = {"Mod1"} key = "F1" command = "spawn" arg = "find /usr/bin -type f - executable ! -empty | sed 's,.*/,,' | awesome-menu -e 'exec ' Execute:" }
+        key { modkey = {"Mod4", "Control"}  key = "s" command = "client_setscratch"  }
+        key { modkey = {"Mod1"} key = "F1" command = "spawn" arg = "find /usr/bin -type f - executable ! -empty | sed 's,.*/,,' | awesome-menu -e 'exec ' Execute:" }
 	key { modkey = {"Mod1"} key = "F4" command = "client_kill" } 
 	key { modkey = {"Mod1", "Shift"} key = "q" command = "client_kill" } 
 	key { modkey = {"Mod4", "Shift"} key = "r"	command = "exec" arg = "awesome" } 
@@ -253,23 +239,22 @@ keys
     #apps
 	key { modkey = {"Mod4", "Shift"} key = "f" command = "spawn" arg = "exec firefox" }
 	key { modkey = {"Mod4"} key = "Return" command = "spawn" arg = "exec xterm" } 
-	key { modkey = {"Mod4"} key = "r" command = "spawn" arg = "exec thunar" } 
+	key { modkey = {"Mod4", "Shift"} key = "w" command = "spawn" arg = "exec thunar" } 
 	key { modkey = {"Mod1"} key = "F2" command = "spawn" arg = "dmenu_path | awesome-menu -e 'exec ' 'dmenuRun:'" }   
-	key { modkey = {"Mod4"} key = "v" command = "spawn" arg = "exec geany" }
-    key { modkey = {"Mod4", "Shift"} key = "c" command = "client_kill" }
-    key { modkey = {"Mod4", "Shift"} key = "q" command = "client_kill" }
-    key { modkey = {"Mod4", "Control"} key = "BackSpace" command = "quit" }
-    key { modkey = {"Mod4"} key = "Print"  command = "spawn"  arg = "exec scrot -d 3" }
-    key { modkey = {"Mod4", "Shift"} key = "Return" command = "spawn" arg = "exec urxvt"  }
-	key { modkey = {"Mod1", "Control"} key = "Up" command = "spawn" arg = "amixer sset Master,0 5%+ && awesome-message -x   1000 -y 16 -d 3 VOL+++++++" }
-    key { modkey = {"Mod1", "Control"} key = "Down" command = "spawn" arg = "amixer sset Master,0 5%- && awesome-message -x 1000 -y 16 -d 3 VOL-------" }
+        key { modkey = {"Mod4", "Shift"} key = "q" command = "client_kill" }
+        key { modkey = {"Mod4", "Shift"} key = "BackSpace" command = "quit" }
+        key { modkey = {"Mod4"} key = "Print"  command = "spawn"  arg = "exec scrot -d 3" }
+        key { modkey = {"Mod4", "Shift"} key = "Return" command = "spawn" arg = "exec urxvt"  }
+	key { modkey = {"Mod1", "Control"} key = "Up" command = "spawn" arg = "amixer sset Master,0 5%+" }
+        key { modkey = {"Mod1", "Control"} key = "Down" command = "spawn" arg = "amixer sset Master,0 5%-" }
     #mpc
-    key { modkey = {"Mod4", "Control"} key = "h" command = "spawn" arg = "mpc prev" }
-	key { modkey = {"Mod4", "Control"} key = "t" command = "spawn" arg = "mpc pause" }
-	key { modkey = {"Mod4", "Control"} key = "n" command = "spawn" arg = "mpc play" }
-	key { modkey = {"Mod4", "Control"} key = "s" command = "spawn" arg = "mpc next" }
-	key { modkey = {"Mod4", "Control"} key = "g" command = "spawn" arg = "mpc seek -2%" }
-	key { modkey = {"Mod4", "Control"} key = "l" command = "spawn" arg = "mpc seek +2%" }
+        key { modkey = {"Mod4", "Control"} key = "Left" command = "spawn" arg = "mpc prev" }
+	key { modkey = {"Mod4", "Shift"} key = "Left" command = "spawn" arg = "mpc toggle" }
+	key { modkey = {"Mod4", "Shift"} key = "Right" command = "spawn" arg = "mpc play" }
+	key { modkey = {"Mod4", "Shift"} key = "Down" command = "spawn" arg = "mpc stop" }
+	key { modkey = {"Mod4", "Control"} key = "Right" command = "spawn" arg = "mpc next" }
+	key { modkey = {"Mod4", "Control"} key = "Up" command = "spawn" arg = "mpc seek -2%" }
+	key { modkey = {"Mod4", "Control"} key = "Down" command = "spawn" arg = "mpc seek +2%" }
 	#switch
 	keylist { modkey = {"Mod4"} command = "tag_view" keylist = { 1, 2, 3, 4, 5, 6, 7, 8, 9 } arglist = { 1, 2, 3, 4, 5, 6, 7, 8, 9 } } 
 	key { modkey = {"Mod4", "Control"} key = "0" command = "tag_toggleview" } 
