--- a/.xmobarrc
+++ b/.xmobarrc
@@ -1,6 +1,6 @@
-Config { font = "xft:terminus-9:normal"
-       , bgColor = "black"
-       , fgColor = "grey"
+Config { font = "xft:terminus-9"
+       , bgColor = "#1e2320"
+       , fgColor = "#f0dfaf"
        , position = Top
        , lowerOnStart = True
        , commands = [ Run Weather "ZUUU" ["-t","<station>: <tempC>C","-L","18","-H","25","--normal","green","--high","red","--low","lightblue"] 36000
