--- a/.screenrc
+++ b/.screenrc
@@ -1,76 +1,104 @@
-# =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-= #
-# Use this line if you want instant charset mapping from gbk to
-# unicode. Conflict with mutt's unicode setting.
-#defencoding gbk
+# ----------------------------------------------------------------------
+# file:     ~/.screenrc
+# author:   Thayer Williams - http://cinderwick.ca
+# modified: June 2009
+# vim:enc=utf-8:nu:ai:si:et:ts=4:sw=4:fdm=indent:fdn=1:ft=screen:
+# ----------------------------------------------------------------------
 
-# hardstatus line
-hardstatus alwayslastline
-hardstatus string "%{= R}[%{=b B}%-w%{=rb db}%>%n %t%{-}%+w%{-b}%< %=%{R}][%{G}%c %{M} %m-%d%{R}]"
-#caption always "%{= mW} %= %H %="
-#caption always "%{= gk}%-Lw%{= rW}%50> %n%f* %t %{-}%+Lw%< %= %{= Gk} %H %{= rW} %l %{= Gk} %0c:%s %d/%m %{-}"
-#new version from vermaden
-#hardstatus string '%{= M} %H%{= G} %l %= %{= w}%-w%{+b r}%n*%t%{-b r}%{w}%+w %= %{c}%d %D %{B}%c '
-# =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-= #
-##    Some general options    ##
+# general --------------------------------------------------------------
 
-# Make the xterm scroller work in screen, also works
-# with mouse scrollwheel(does not work...)
-termcapinfo xterm*|rxvt ti@:te@
+startup_message off # disable startup msg
+altscreen on        # restore window contents after a vi session
+autodetach on       # autodetach on disconnect/close
+nethack on          # nethackish status messages
+defscrollback 2048  # default scrollback buffer
+defutf8 on          # UTF-8 char encoding
+defflow off         # disable flow control
+defbce on           # use current bg color for erased chars
+msgwait 3           # secs msgs are displayed
+defshell -bash      # dash makes it a login shell
+vbell off           # toggle visual bell
+vbell_msg ""
+bell_msg ""
+activity ""
+shell /bin/zsh
+
+#  using backticks will likely screw up mouse scrolling because
+#  mouse events often use backticks in their escape codes
+#escape ``          # replace C- escape sequence
+#escape `e          # double-tap backtick toggles screen windows
+#escape \\         # use C-backslash instead of C-a
+
+# terminal info --------------------------------------------------------
+termcapinfo rxvt|rxvt-unicode|urxvt|rxvt-256color|screen|xs|xterm*|rxvt ti@:te@
+#terminfo *rxvt* 'Co#256:AB=\E[48;5;%dm:AF=\E[38;5;%dm'
+#term screen-256color
+#terminfo rxvt-unicode ti@:te@:
 #dynamic title
 termcapinfo xterm* 'hs:ts=\E]2;:fs=\007:ds=\E]2;screen\007'
+#fix rxvt-unicode 256 color problem
+terminfo rxvt-unicode 'Co#256:AB=\E[48;5;%dm:AF=\E[38;5;%dm'
 # bind Shift+PgUp/PgDn(does not work...)
 #bindkey -m -k kN stuff ^D
 #bindkey -m -k kP stuff ^U
 #bindkey -m "^[[5;2~" stuff ^b
 #bindkey -m "^[[6;2~" stuff ^f
- 
-# Automatically detach on hangup, or the screen will keep eating your memory after the terminal emulator has been terminated.
-autodetach on		# default: on
 
-# Refresh the display when exiting programs like vim, nano, irssi and etc.
-altscreen on
-
-#define a large scrollback buffer
-defscrollback 10000
-
-# Set messages timeout to one second: 
-msgwait 5
-pow_detach_msg "Screen session of \$LOGNAME \$:cr:\$:nl:ended."
-#version
-# start message:
-startup_message off	# default: on
-
-# use audio bell
-vbell off
-vbell_msg "   Wuff  ----  Wuff!!  "
-
-#nethack style messages
-#nethack on
-
-#utf-8 handling
-defutf8 on
-
-#use zshell as default shell
-#shell zsh
-shell /bin/zsh
-
-# =-=-=-=-=-=-=-=-=-=-=Key bindings-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-= #
-# bind F1  to select 1
-# bind F7  to detach screen session from this terminal
-# bind F8  to kill current screen window.
-# bind F9  to create a new screen
-# bind F10 to rename current screen window
-# bind F11 to move to previous window
-# bind F12 to move to next window
-#bindkey -k k1 select 1
-#bindkey -k k7 detach
-#bindkey -k k8 kill
-#bindkey -k k9 screen
-#bindkey -k k; title
+# misc keybinds --------------------------------------------------------
+bindkey -k k; quit   #F10 to quit screen
+bindkey "^[Od" prev  # change window with ctrl-left
+bindkey "^[Oc" next  # change window with ctrl-right
 bindkey -k F1 prev
 bindkey -k F2 next
-# =-=-=-=-=-=-=-=-=-=-=-Sessions=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-= #
-screen
-screen
-screen
-#screen
+
+# Window numbering starts at 1 -----------------------------------------
+
+bind c screen 1
+bind 0 select 10
+
+
+# load some apps (last listed will be focused) -------------------------
+
+#screen 10 htop
+screen 9  ncmpcpp
+screen 1  mutt
+screen -t zsh 3
+screen -t zsh 2
+
+
+# statusbar ------------------------------------------------------------
+
+hardstatus alwayslastline '%{= dW}[ %{dg}%H %{dW}][%{dc}%= %?%-Lw%?%{dy}(%{dW}%n*%f %t%?(%u)%?%{dy})%{= dc}%?%+Lw%?%?%= %{dW}][%{dM}%l%{dW}][%{dy} %m/%d %c %{dW}]'
+#hardstatus alwayslastline '%{gk}[ %{G}%H %{g}][%= %{wk}%?%-Lw%?%{=b kR}(%{W}%n*%f %t%?(%u)%?%{=b kR})%{= kw}%?%+Lw%?%?%= %{g}][%{Y}%l%{g}]%{=b C}[ %m/%d %c ]%{W}'
+
+#hardstatus string '%{= mK}%-Lw%{= KW}%50>%n%f* %t%{= mK}%+Lw%< %{= kG}%-=%D %d %M %Y %c:%s%{-}'
+### from cactus
+#hardstatus string "%{+b Rk}(%{-b g}$LOGNAME@%H%{+b R}) (%{-b g}%C %a%{+b R}) %{-b g} %n %t %h"
+### more examples from the gentoo wiki
+#hardstatus string '%{= kG}%-Lw%{= kW}%50> %n%f* %t%{= kG}%+Lw%< %{= kG}%-=%c:%s%{-}'
+#hardstatus string '%{= kG}[ %{G}%H %{g}][%= %{= kw}%?%-Lw%?%{r}(%{W}%n*%f%t%?(%u)%?%{r})%{w}%?%+Lw%?%?%= %{g}][%{B} %d/%m %{W}%c %{g}]'
+### yet another example--from Dive Into Mark
+## window-list <nowplaying> <mm/dd/yy> <HH:MM>am/pm
+#caption always "%{= kw}%-w%{= BW}%n %t%{-}%+w %-= %1` %m/%d/%y %C:%s%a"
+#caption always "%{=b dw}%{=b dw}[ %{-b dc}%h%{=b dw} ] [ %= %?%{-b dc}%-Lw%?%{+b dk}(%{+b dw}%n:%t%{+b dk})%?(%u)%?%{-b dw}%?%{-b dc}%+Lw%? %{=b dk}%{=b dw}] [%{-b dw} %1`%{=b dw} ]"
+
+#caption always "%{bk}%H%{gk}: screen%{gk} | %{rk}(system load: %l)%{gk} | %-21=%{gk}%D %Y.%m.%d %0c"
+# hardstatus alwayslastline "%{wr}%n%f %t %{kw} | %?%-Lw%?%{wb}%n*%f %t%?(%u)%?%{kw}%?%+Lw%? %{wk}"
+#hardstatus alwayslastline "%?%-Lw%?%{wb}%n*%f %t%?(%u)%?%{kw}%?%+Lw%? %{wk}"
+
+
+# tips & tricks --------------------------------------------------------
+
+# bind 'screen -c /dev/null' to open screen without using .screenrc prefs
+
+
+# experimental stuff ---------------------------------------------------
+
+#termcapinfo rxvt ti@:te@    # supposed to fix mouse scrolling issues (e.g. vim)
+
+#let pgup/pgdn scroll under urxvt (see .Xdefaults)
+indkey "^[[5;2~" eval "copy" "stuff ^u"
+indkey -m "^[[5;2~" stuff ^u
+indkey -m "^[[6;2~" stuff ^d
+
+
